fixtures/invalid/duplicate-cell-ids/src/two/public.ts
export const twoValue = 2;
